force-app/main/default/objects/Krow__Payment__c/fields/Krow__Invoice__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Krow__Account__c</field>
            <operation>equals</operation>
            <valueField>Krow__Invoice__c.Krow__Project__r.Krow__Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>Krow__Invoice__c.Krow__Balance__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Krow__Invoice__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <type>Lookup</type>
</CustomField>