force-app/main/default/objects/Krow__Payment__c/fields/Krow__Payment__c.field-meta.xml
<CustomField>
    <fullName>Krow__Payment__c</fullName>
    <description>Amount paid for selected invoice</description>
    <label>Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>