force-app/main/default/objects/Krow__Payment__c/fields/Krow__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Krow__Payment_Date__c</fullName>
    <description>Date of payment</description>
    <label>Payment Date</label>
    <type>Date</type>
</CustomField>